--- a/BananaPlatforms.csproj
+++ b/BananaPlatforms.csproj
@@ -293,4 +293,8 @@
       <HintPath>$(GameAssemblyPath)\websocket-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Patches\" />
+  </ItemGroup>
 </Project>
